logs/pyion.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ion'...
Compiling './lib/python3.5/site-packages/ion/cpercep.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (cpercep.py, line 156)
Compiling './lib/python3.5/site-packages/ion/metadata.py'...
***   File "./lib/python3.5/site-packages/ion/metadata.py", line 100
    print 'Warning: setting Dublin Core metadata items like %r \
                       using non-titlecase name (%r) is deprecated!' % (tcase,
                                                                
                                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ion/n'...
Compiling './lib/python3.5/site-packages/ion/n/__init__.py'...
***   File "./lib/python3.5/site-packages/ion/n/__init__.py", line 27
    elif maxv < 0x7fffffffffffffffL:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ion/n/powers.py'...
***   File "./lib/python3.5/site-packages/ion/n/powers.py", line 3
    print 'Warning: ion.n.powers module is deprecated, use ion.n instead!'
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ion/xn'...
Compiling './lib/python3.5/site-packages/ion/xn/curve.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (curve.py, line 240)
Compiling './lib/python3.5/site-packages/ion/xn/fixed.py'...
***   File "./lib/python3.5/site-packages/ion/xn/fixed.py", line 12
    print self.value
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ion/xn/spline.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (spline.py, line 57)
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyion-0.2.dev0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
